--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "my-react-demo",
+  
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -12,7 +14,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.11",
     "framer-motion": "^12.5.0",
-    "motion": "^12.6.2",
+    "gh-pages": "^6.3.0",
+    "motion": "^12.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
